# nc-macro-visualizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  TODO.md  index.html  limitations.md  nctool.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: release.md  sns.md  test.md
.claude/hooks/: post-edit-test.sh  pre-edit-main.sh
.github/workflows/: ci.yml
docs/: design.md  project_policy_spec_status.md  v0.2_design_plan.md  v0.3_nassi_shneiderman_plan.md
examples/: sample.nc
examples/v030_pad_sample/: README.md  analysis.json  cfg.json  flow.mmd  pad.html  pad.txt  report.md
lp/: README.md  index.html  style.css
lp/demo/: README.md  app.js  index.html  style.css
samples/: 01_simple_if.nc  02_goto_loop.nc  03_subprogram_call.nc  04_variables.nc  05_machine_mcode.nc  06_long_jump_connector.nc
schemas/: beginner_flow.schema.json  cfg.schema.json  structured_tree.schema.json
src/nc_macro_visualizer/: __init__.py
src/nc_macro_visualizer/analyzer/: __init__.py  analysis.py
src/nc_macro_visualizer/cli/: main.py
src/nc_macro_visualizer/flowchart/: __init__.py  builder.py  cfg.py  models.py  structurizer.py  terminology.py
src/nc_macro_visualizer/models/: __init__.py  analysis.py
tests/: test_analyzer.py  test_cfg_v030.py  test_cli.py  test_flowchart_builder.py  test_flowchart_models.py  test_parser.py  test_renderer.py  test_structured_renderers.py  test_v010_regression.py  test_web_v030.py
tools/: generate_ogp.py
web/: app.js  index.html  pad.css  style.css
(+13 files in other folders)
