[project]
name = "nc-macro-visualizer"
version = "0.3.0"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
nctool = "nc_macro_visualizer.cli.main:main"

[project.optional-dependencies]
test = ["pytest>=9.0,<10.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
